Added more options
- Added sendForm() in Player
- Deprecated sendSimpleForm()
- Deprecated SimpleFormResponsePacket
- Automatic generate ID for Form
- Added CustomForm
- Added CustomForm Response
- Added SimpleForm Response
- Edited SimpleForm
- Added FormID System
- Edited Duplicate value in Timer
- Added Eng lang
- Added TransferCommand

--- a/src/lang/fra.json
+++ b/src/lang/fra.json
@@ -1,17 +1,18 @@
 {
-  "server-start": "Server has been started successfully on {SERVER}!",
-  "destination": "Destination {DESTINATION-SERVER}",
+  "server-start": "Le serveur a été lancé avec succès sur {SERVER}!",
+  "destination": "Destination: {DESTINATION-SERVER}",
 
   "player": {
-    "add-player": "Added player {PLAYER}",
-    "remove-player": "Removed player {PLAYER}"
+    "add-player": "Ajout de {PLAYER}",
+    "remove-player": "Suppression de {PLAYER}"
   },
 
   "command": {
-    "registered-success": "{COMMAND} has been registered successfully!"
+    "registered-success": "{COMMAND} a été enregistré avec succès !"
   },
+
   "plugin": {
-    "load": "Plugin {PLUGIN} has been loaded successfully!",
-    "invalid-api": "Plugin {PLUGIN} does not have the right API!"
+    "load": "Plugin {PLUGIN} a été chargé avec succès !",
+    "invalid-api": "Plugin {PLUGIN} n'a pas la bonne API !"
   }
 }
