Added packs features

--- a/software/src/lang/eng.json
+++ b/software/src/lang/eng.json
@@ -26,12 +26,18 @@
       "development-build": "Sorry, your server failed to start because you are using a development version of EasyProxy, you have set the configuration to prohibit development versions!"
     }
   },
+
   "cheats": {
     "autoWord": {
       "confirm": "§aCode find! Send a message to send code!",
       "send": "§aCode send!",
       "elapsed-time": "§cElapsed time"
     }
+  },
+  "pack": {
+    "load": "Loading resource packs...",
+    "loaded": "{COUNT} packs loaded!",
+    "loading": "Loading {PACK}..."
   },
 
   "plugin": {
